# sieve

./: .copier-answers.yml  .gitignore  BIBLIOGRAPHY_IDEA.md  CLAUDE.md  README.md  paper-agent-spec.md  pyproject.toml  setup_launchd.sh
config/: interests.md.example  settings.yaml.example
src/sieve/: __init__.py  cite.py  cli.py  db.py  fetch.py  generate.py  ingest.py  normalize.py  score.py  seed.py  server.py  settings.py
src/sieve/templates/: bibliography.html.j2  index.html.j2
tests/: test_export.py  test_feedback.py  test_learn.py
